--- a/base.css
+++ b/base.css
@@ -7,12 +7,18 @@ header{
 
 }
 
+ul{
+	list-style: none;
+}
+
 h1{
 	font-family: 'Helvetica';
 	font-size: 70px;
 	font-weight: bold;
 	color: white;
 }
+
+/**********************MAIN************************************/
 
 h2{
 	font-size: 32px;
@@ -27,6 +33,8 @@ h3{
 span{
 	color: white;
 }
+
+/**********************FOOTER************************************/
 
 footer{
 	background-color: dimgray;
