--- a/base.css
+++ b/base.css
@@ -4,21 +4,31 @@ body{
 }
 
 header{
-
+	background-image: url("image/the-flatiron-building.png");
+	color: white;
 }
 
-ul{
+ul, .ftnav{
 	list-style: none;
+}
+
+ul li{
+	margin: 15px;
 }
 
 h1{
 	font-family: 'Helvetica';
 	font-size: 70px;
 	font-weight: bold;
-	color: white;
+	
 }
 
 /**********************MAIN************************************/
+.halfway{
+	background-image: url("image/the-flatiron-building.png");
+	color: white;
+}
+
 
 h2{
 	font-size: 32px;
@@ -32,6 +42,7 @@ h3{
 
 p{
 	font-size: 14px;
+
 }
 
 span{
@@ -44,12 +55,19 @@ footer{
 	background-color: dimgray;
 	color: white;
 	font-size: 11px;
+
 }
 
-ul.ftnav{
+.addy{
+	margin: 10px;
+}
+
+
+footer ul li{
 	display: inline;
+	font-size: 14px;
 }
 
 a{
-	color: ;
+	color: white;
 }
